--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,14 @@
+--- 
 author: Chris Williams <chris@bingosnet.co.uk>
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.67
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Bundle-POE-IRC
 no_index: 
   directory: 
     - inc
     - t
-version: 1.01
+version: 1.02
